# caton-cmxs-examples

./: README.md
c/: CMakeLists.txt  example_c.c  example_c_select.c
common/: getopt_win.c  getopt_win.h
cpp/: CMakeLists.txt  example_cpp.cpp  example_cpp_select.cpp  example_cross_compile.cmake
obs_plugins/src/: Config.cpp  Config.h  main-output.cpp  main-output.h  obs-cmxs-output.cpp  obs-cmxs-source.cpp  obs-cmxs-tool.cpp  obs-cmxs-tool.h  plugin-main.cpp  plugin-main.h  plugin-support.c.in  plugin-support.h
obs_plugins/src/forms/: output-settings.cpp  output-settings.h  output-settings.ui
vlc_access_plugin/: CMakeLists.txt  access_cmxs_plugin.cpp
